{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 13,
  "lineage": "9947fc7c-61f9-7381-811a-801f6aa0a102",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "thehome_ec2_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:684759373853:instance/i-03f05a1c15be2cec3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f05a1c15be2cec3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "thehome_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bdab207100399bb4",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-44-203-103-110.compute-1.amazonaws.com",
            "public_ip": "44.203.103.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bc5ec6f79a3c670a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057d729960a688c92",
            "tags": {
              "Name": "thehome_ec2_inst"
            },
            "tags_all": {
              "Name": "thehome_ec2_inst"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a107e2b633014cf7"
            ]
          },
          "dependencies": [
            "aws_key_pair.thehome_key",
            "aws_security_group.thehome_sg",
            "aws_subnet.thehome_subnet_pub_1a",
            "aws_vpc.the-home_vpc_1",
            "data.aws_ami.thehome_server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "thehome_igw_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684759373853:internet-gateway/igw-0907d6908c63b4dba",
            "id": "igw-0907d6908c63b4dba",
            "owner_id": "684759373853",
            "tags": {
              "Name": "thehome_igw_1a"
            },
            "tags_all": {
              "Name": "thehome_igw_1a"
            },
            "vpc_id": "vpc-0632c82df75a410a7"
          },
          "dependencies": [
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "thehome_default_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0907d6908c63b4dba",
            "id": "r-rtb-01feef01adf1341e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01feef01adf1341e6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.thehome_igw_1a",
            "aws_route_table.thehome_rtb_pub",
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "thehome_rtb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684759373853:route-table/rtb-01feef01adf1341e6",
            "id": "rtb-01feef01adf1341e6",
            "owner_id": "684759373853",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "thehome_rtb_pub"
            },
            "tags_all": {
              "Name": "thehome_rtb_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632c82df75a410a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "thehome_rtba_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f619e7a6a3dedad",
            "route_table_id": "rtb-01feef01adf1341e6",
            "subnet_id": "subnet-057d729960a688c92"
          },
          "dependencies": [
            "aws_route_table.thehome_rtb_pub",
            "aws_subnet.thehome_subnet_pub_1a",
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "thehome_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684759373853:security-group/sg-0a107e2b633014cf7",
            "description": "thehome security group",
            "egress": [],
            "id": "sg-0a107e2b633014cf7",
            "ingress": [],
            "name": "thehome_sg",
            "name_prefix": "",
            "owner_id": "684759373853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thehome_sg"
            },
            "tags_all": {
              "Name": "thehome_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632c82df75a410a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2205141339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a107e2b633014cf7",
            "security_group_rule_id": "sgr-01a75ba6ec7806d3c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.thehome_sg",
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-904238318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a107e2b633014cf7",
            "security_group_rule_id": "sgr-00eca9713e9e23661",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.thehome_sg",
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-694371925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a107e2b633014cf7",
            "security_group_rule_id": "sgr-07263de50c29736c4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.thehome_sg",
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "thehome_subnet_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684759373853:subnet/subnet-057d729960a688c92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057d729960a688c92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "684759373853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "thehome_subnet_pub_1a"
            },
            "tags_all": {
              "Name": "thehome_subnet_pub_1a"
            },
            "vpc_id": "vpc-0632c82df75a410a7"
          },
          "dependencies": [
            "aws_vpc.the-home_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "the-home_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684759373853:vpc/vpc-0632c82df75a410a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09aa3b8938ddb13e2",
            "default_route_table_id": "rtb-058caf54cd34afdea",
            "default_security_group_id": "sg-03f9aff6dba77d5e5",
            "dhcp_options_id": "dopt-091f71680b04bb988",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0632c82df75a410a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058caf54cd34afdea",
            "owner_id": "684759373853",
            "tags": {
              "Name": "the-home_vpc_1"
            },
            "tags_all": {
              "Name": "the-home_vpc_1"
            }
          }
        }
      ]
    }
  ]
}